--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -3,8 +3,8 @@
 # Use of this source code is governed by a BSD-style license that can be
 # found in the LICENSE file.
 #
-org.gradle.jvmargs=-Xmx2048M
+org.gradle.jvmargs=-Xmx4G
 android.useAndroidX=true
 android.enableJetifier=true
 android.enableR8=true
-android.bundle.enableUncompressedNativeLibs=false
+# android.bundle.enableUncompressedNativeLibs=false
