--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -73,27 +73,27 @@
 
         <!-- Begin FlutterDownloader customization -->
         <!-- disable default Initializer -->
-        <provider
-                android:name="androidx.startup.InitializationProvider"
-                android:authorities="${applicationId}.androidx-startup"
-                android:exported="false"
-                tools:node="merge">
-            <meta-data
-                    android:name="androidx.work.WorkManagerInitializer"
-                    android:value="androidx.startup"
-                    tools:node="remove" />
-        </provider>
+<!--        <provider-->
+<!--                android:name="androidx.startup.InitializationProvider"-->
+<!--                android:authorities="${applicationId}.androidx-startup"-->
+<!--                android:exported="false"-->
+<!--                tools:node="merge">-->
+<!--            <meta-data-->
+<!--                    android:name="androidx.work.WorkManagerInitializer"-->
+<!--                    android:value="androidx.startup"-->
+<!--                    tools:node="remove" />-->
+<!--        </provider>-->
 
         <!-- declare customized Initializer -->
-        <provider
-                android:name="vn.hunghd.flutterdownloader.FlutterDownloaderInitializer"
-                android:authorities="${applicationId}.flutter-downloader-init"
-                android:exported="false">
-            <!-- changes this number to configure the maximum number of concurrent tasks -->
-            <meta-data
-                    android:name="vn.hunghd.flutterdownloader.MAX_CONCURRENT_TASKS"
-                    android:value="1" />
-        </provider>
+<!--        <provider-->
+<!--                android:name="vn.hunghd.flutterdownloader.FlutterDownloaderInitializer"-->
+<!--                android:authorities="${applicationId}.flutter-downloader-init"-->
+<!--                android:exported="false">-->
+<!--            &lt;!&ndash; changes this number to configure the maximum number of concurrent tasks &ndash;&gt;-->
+<!--            <meta-data-->
+<!--                    android:name="vn.hunghd.flutterdownloader.MAX_CONCURRENT_TASKS"-->
+<!--                    android:value="1" />-->
+<!--        </provider>-->
         <!-- End FlutterDownloader customization -->
         <meta-data
                 android:name="flutterEmbedding"
